tests/expectations/compiler/statements/multiple_returns_in_one_block_fail.out
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:5:5
     |
   5 |     let double: u32 = x + x;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:6:5
     |
   6 |     return double;
     |     ^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {}
     |         ^^^^^^^^^
